add mapbox creds file, remove libs/Leaflet.CanvasLayer dir

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script>module = {};</script>
   <script src="libs/sprintf/lib/sprintf.js"></script>
   <script src="topojsonCanvasLayer.js"></script>
+  <script src="mapbox_credentials.js"></script>
   <script src="hucs.js"></script>
 <style type="text/css">
 #waitmessage {
